test/errors/redeclare_variable.li
let x = 1;
let x = 2;
const y = 3;
const y = 4;
